--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,4 +45,24 @@ jobs:
           docker_layer_caching: true
       - run:
           name: Build docker image
-          command: docker build -t sample:${TAG} .
+          command: |
+            docker build -t rankey/sample:$TAG .
+            echo totoycent50 | docker login -u rankey --password-stdin
+            docker push rankey/sample:$TAG    
+  workflows:
+    version: 2
+    build_and_deploy:
+      jobs:
+        - test
+        - build:
+            branches:
+              only:
+                - master
+            requires:
+              - test
+        - deploy:
+            branches:
+              only:
+                - master
+            requires:
+              - build 
